# employee-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
samples/: employees.csv  employees.json
scripts/: seed.py
src/: __init__.py  config.py  main.py  models.py
src/auth/: __init__.py  async_token_client.py  strategy.py  token_client.py
src/client/: __init__.py  async_employee_client.py  employee_client.py
src/mock_server/: __init__.py  app.py  data.py
src/server/: __init__.py  app.py
src/storage/: __init__.py  repository.py
tests/: __init__.py  test_async_auth.py  test_async_client.py  test_auth.py  test_client.py  test_e2e.py  test_models.py  test_server.py  test_storage.py
